WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220693
[JSC] GenericArguments<Type>::defineOwnProperty's assumption about error is not correct
https://bugs.webkit.org/show_bug.cgi?id=220693
Summary
[JSC] GenericArguments<Type>::defineOwnProperty's assumption about error is n...
Yusuke Suzuki
Reported
2021-01-17 18:00:46 PST
[JSC] GenericArguments<Type>::defineOwnProperty's assumption about error is not correct
Attachments
Patch
(3.52 KB, patch)
2021-01-17 18:02 PST
,
Yusuke Suzuki
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(3.45 KB, patch)
2021-01-17 20:06 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2021-01-17 18:02:15 PST
Created
attachment 417788
[details]
Patch
Yusuke Suzuki
Comment 2
2021-01-17 18:02:18 PST
<
rdar://problem/72929171
>
Yusuke Suzuki
Comment 3
2021-01-17 20:06:24 PST
Created
attachment 417790
[details]
Patch
Mark Lam
Comment 4
2021-01-17 22:06:04 PST
Comment on
attachment 417790
[details]
Patch r=me
EWS
Comment 5
2021-01-17 22:36:24 PST
Committed
r271570
: <
https://trac.webkit.org/changeset/271570
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 417790
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug