Cherry-pick r271570. rdar://problem/74105714

[JSC] GenericArguments<Type>::defineOwnProperty's assumption about error is not correct
    https://bugs.webkit.org/show_bug.cgi?id=220693
    <rdar://problem/72929171>

    Reviewed by Mark Lam.

    JSTests:

    * stress/freeze-invokes-out-of-memory.js: Added.
    (shouldThrow):

    Source/JavaScriptCore:

    Any function taking JSGlobalObject* can cause out-of-memory error potentially. And we have a way to invoke it.
    But GenericArguments<Type>::defineOwnProperty didn't assume OutOfMemory error. This patch fixes it.

    * runtime/GenericArgumentsInlines.h:
    (JSC::GenericArguments<Type>::defineOwnProperty):

    Canonical link: https://commits.webkit.org/233106@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271570 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/232923.174@safari-611-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-611-branch@272543 268f45cc-cd09-0410-ab3c-d52691b4dbfc